[package]
name = "hcp-common"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
url = "*"
url_serde = "*"
uuid = {version = "*", features = ["v4", "serde"]}